# Nova

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Generate.py  Premake.bat  premake5.lua
Nova/: Nova-Premake.lua
Nova/src/: main.cpp  nova_app.cpp  nova_app.hpp  nova_game.cpp  nova_game.hpp  nova_pch.cpp  nova_pch.hpp
Nova/src/layers/: nova_mainlayer.cpp  nova_mainlayer.hpp
Nova/src/system_sets/: nova_core-system-set.cpp  nova_core-system-set.hpp
_vscode/: c_cpp_properties.json  launch.json  tasks.json
